--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,4 @@ dkms.conf
 .gdb_history
 peda-session-test_libasm.txt
 libasm_tester
-test_disass
-check_size
-tests/checks/output/
+doc/assets/syscall_sw.h
