--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Debug
-        run: make debug
+        run: |
+          sudo apt-get install -y nasm
+          make debug
