--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Debug
+      - name: Install
         run: |
+          sudo apt-get update
           sudo apt-get install -y nasm
-          make debug
+      - name: Debug
+        run: make debug
